--- a/MySpot/.gitignore
+++ b/MySpot/.gitignore
@@ -1,3 +1,10 @@
+# Ignoruj foldery i pliki bin i obj
+bin/
+obj/
+
+# Ignoruj pliki .dll i .pdb
+*.dll
+*.pdb
+
+# Ignoruj foldery Visual Studio
 .vs/
-.obj/
-.bin/
