--- a/MySpot/src/MySpot.Infrastructure/MySpot.Infrastructure.csproj
+++ b/MySpot/src/MySpot.Infrastructure/MySpot.Infrastructure.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Accelergreat.EntityFramework.PostgreSql" Version="3.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.1" />
   </ItemGroup>
 
   <ItemGroup>
