new-business-logic

--- a/MySpot/src/MySpot.Core/MySpot.Core.csproj
+++ b/MySpot/src/MySpot.Core/MySpot.Core.csproj
@@ -9,4 +9,7 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
   </ItemGroup>
 
+	<ItemGroup>
+		<InternalsVisibleTo Include="My.Spot.Tests.Unit"/>
+	</ItemGroup>
 </Project>
