--- a/MySpot/docker-compose.yml
+++ b/MySpot/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3'
-
 services:
   postgres:
     image: postgres
@@ -23,7 +21,15 @@ services:
       - 8080:80
     depends_on:
       - postgres
-
+  
+  myspot-api:
+    build:
+      context: ./src/
+      dockerfile: MySpot.Api/Dockerfile  
+    ports:
+      - "8081:80"
+    depends_on:
+      - postgres
 
 volumes:
   postgres:
