--- a/MySpot/src/MySpot.Api/appsettings.Development.json
+++ b/MySpot/src/MySpot.Api/appsettings.Development.json
@@ -1,8 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Information",
+            "Microsoft.EntityFrameworkCore.Database.Command": "Warning",
+            "Microsoft.EntityFrameworkCore.Infrastructure": "Warning"
+        }
+    },
+    "app" :{
+        "name": "MySpot API [development]"
     }
-  }
 }
