--- a/MySpot/src/MySpot.Api/MySpot.Api.csproj
+++ b/MySpot/src/MySpot.Api/MySpot.Api.csproj
@@ -18,5 +18,9 @@
     <ProjectReference Include="..\MySpot.Infrastructure\MySpot.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+	<InternalsVisibleTo Include="MySpot.Tests.Integration"/>
+  </ItemGroup>
+
 
 </Project>
